--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -1,8 +1,29 @@
+//navbar css
+
 .navbar {
     @include fadeInAnimation(0.5s, 0s);
     min-height: 60px;
     background-color: $primaryColor;
     box-shadow: 0px 1px 2px $secondaryColor;
+
+    //navbar hover effects
+
+    .nav-link {
+        font-size: 20px;
+        transition: 0.2s;
+        line-height: 0px;
+    
+        &.active {
+            text-decoration: underline;
+            text-decoration-color: #006aff;
+        }
+    
+        &:hover {
+            color: #006aff;
+            transition: 0.2s;
+            font-size: 22px;
+        }
+    }
 
     /* styles for navbar when collapsed */
 
@@ -29,19 +50,3 @@
     }
 }
 
-.nav-link {
-    font-size: 20px;
-    transition: 0.2s;
-    line-height: 0px;
-
-    &.active {
-        text-decoration: underline;
-        text-decoration-color: #006aff;
-    }
-
-    &:hover {
-        color: #006aff;
-        transition: 0.2s;
-        font-size: 22px;
-    }
-}
