--- a/sass/views/_index.scss
+++ b/sass/views/_index.scss
@@ -1,58 +1,50 @@
 /* hero attributes*/
 
-/* mobile hero view */
-@media (max-width : 1200px) {
-    .hero__container {
-        @include fadeInAnimation(1s, 0s);
-        position: relative;
-        display: flex;
-        padding-top: 60px;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
-    }
+/* hero css */
 
-    .hero__container-logo {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 350px;
-    }
+.hero__container {
+    @include fadeInAnimation(1s, 0s);
+    padding-top: 60px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    height: 500px;
 
-    .hero__container-sideImage-container {
-        display: none;
-    }
+    //Logo css 
+    &-logo {
+        margin: auto;
 
-}
+        h1 {
+            font-weight: bold;
+            font-size: 60px;
+            text-align: left;
+        }
 
-/* desktop hero view */
-@media (min-width : 1200px) {
-    .hero__container {
-        @include fadeInAnimation(1s, 0s);
-        padding-top: 60px;
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        height: 500px;
-    }
+        a {
+            justify-content: center;
+        }
 
-    .hero__container-logo {
+        img {
+            height: 200px;
+        }
+
         p {
             @include slideDownAnimation(1s, 0.2s);
+            margin-bottom: 0px;
         }
     }
 
-    .hero__container-sideImage-container {
+    &-sideImage-container {
         position: relative;
         overflow: visible;
         //3D test
         /*
-        transform-style: preserve-3d;
-        perspective: 100em;
-        transform: translate3d(0px, 80px, 0px) rotate3d(-0.1, -0.7, 0, -60deg);
-        box-shadow: 120px 0px 80px -10px rgba(0, 0, 0, 0.7);
-        border-width: 10px;
-      */
+            transform-style: preserve-3d;
+            perspective: 100em;
+            transform: translate3d(0px, 80px, 0px) rotate3d(-0.1, -0.7, 0, -60deg);
+            box-shadow: 120px 0px 80px -10px rgba(0, 0, 0, 0.7);
+            border-width: 10px;
+          */
         width: 53%;
 
         box-shadow: -10px 0px 20px 10px rgba(0, 0, 0, 0.222);
@@ -64,97 +56,76 @@
             transform: skewX(10deg) translateX(-40px);
 
         }
+
+        /* carousel css */
+
+        .carousel-inner {
+            img {
+                object-fit: cover;
+            }
+        }
     }
-}
 
-.hero__container {
+    /* Mobile hero view */
 
-    &-logo {
-        margin: auto;
+    @media (max-width: 1200px) {
+        height: 100%;
+        flex-direction: column;
+        justify-content: space-between;
 
-        /* Main title size and position*/
-        a {
+        &-sideImage-container {
+            display: none;
+        }
+
+        &-logo {
+            display: flex;
+            flex-direction: column;
             justify-content: center;
-        }
-
-        img {
-            height: 200px;
-        }
-
-        p {
-            margin-bottom: 0px;
+            height: 350px;
         }
     }
-
-    h1 {
-        font-weight: bold;
-        font-size: 60px;
-        text-align: left;
-    }
-
 }
 
-/*carousel settings */
+/* app grid css */
 
-.carousel-inner {
+.app__icons-grid {
+    @include fadeInAnimation(1s, 0s);
+    //css for app grid background for custom JS
+    transition: "background-image 1s ease";
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: auto;
+    width: 800px;
+
     img {
-        object-fit: cover;
+        object-fit: contain;
+        width: 250px;
+        height: 150px;
     }
-}
 
-/* mobile app grid */
+    /* mobile app grid */
 
-@media (max-width : 1200px) {
-    .app__icons-grid {
-
+    @media (max-width : 1200px) {
         //css for app grid background for custom JS
-        transition: "background-image 1s ease";
+        width: 100%;
         background-size: min(50vw, 250px);
-        background-repeat: no-repeat;
-        background-position: center;
-
-        @include fadeInAnimation(1s, 0s);
         display: grid;
         gap: 1px;
-        padding: 10x;
+        padding: 10px;
         grid-template-columns: repeat(2, 160px);
-        justify-content: center;
         justify-items: center;
 
         img {
             display: flex;
-            object-fit: contain;
             width: 110px;
             height: 110px;
-        }
-    }
-
-}
-
-/* desktop app grid */
-
-@media (min-width : 1200px) {
-    .app__icons-grid {
-        @include fadeInAnimation(1s, 0s);
-
-        //css for app grid background for custom JS
-        transition: "background-image 1s ease";
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        gap: 20px;
-        margin: auto;
-        width: 800px;
-
-        img {
-            object-fit: contain;
-            width: 250px;
-            height: 150px;
         }
     }
 }
