--- a/sass/components/_leftAligned-text.scss
+++ b/sass/components/_leftAligned-text.scss
@@ -16,7 +16,7 @@
         justify-content: center;
 
         h2 {
-
+            margin-left: 0px;
             margin-top: 30px;
             margin-bottom: 0px;
         }
