added padding to contact page input fields

--- a/sass/views/_contact.scss
+++ b/sass/views/_contact.scss
@@ -63,6 +63,7 @@
             color: white;
             background-color: #00000034;
             border-width: 1px;
+            padding: 10px;
         }
 
         input {
