--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -5,6 +5,7 @@
     min-height: 60px;
     background-color: $primaryColor;
     box-shadow: 0px 1px 2px $secondaryColor;
+    transition: 0.2s;
 
     //navbar hover effects
 
@@ -26,12 +27,10 @@
     }
 
     /* styles for navbar when collapsed */
-
-    &-collapse.show {
-        transition: 0.2s;
+    &-collapse.show, &-collapse.collapsing {
+        transition: 0.5s;
         justify-content: center;
         align-items: center;
-        height: 100vh;
 
         .navbar-nav {
             display: flex;
